# Conversational-AI-Assistent-for-Students

./: .gitignore  README.md  app.py  pyproject.toml
src/: calendar_functions.py  db_functions.py  gradio_app.py  gt_tools.py  program_functions.py  set_db.py  st_run.py
